# cookiecutter-app

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __main__.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
