[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github}}/{{cookiecutter.project_name}}"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.__main__:app"
